# cookiecutter-esp32-webserver

./: .bumpversion.cfg  .gitignore  .gitmodules  HISTORY.md  Makefile  README.md  cookiecutter.json  nvs.csv
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .bumpversion.cfg  .gitignore  .gitmodules  CMakeLists.txt  CMakelist.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults
{{cookiecutter.project_name}}/src/: CMakeList.txt  CMakeLists.txt  Kconfig.projbuild  filesystem.c  filesystem.h  helpers.c  helpers.h  led.c  led.h  main.c  ota.h  route.c  route.h  server.c  server.h
{{cookiecutter.project_name}}/src/html/: api_v1_filesystem.html  api_v1_filesystem_upload.html  api_v1_nvs.js  common.css  mindmup-editabletable.js
{{cookiecutter.project_name}}/src/route/v1/: example.c  example.h  filesystem.c  filesystem.h  nvs.c  nvs.h  ota.c  ota.h  system.c  system.h
