
idf_component_register(
		SRCS
			"main.c"
			"server.c"
            "filesystem.c"
            "led.c"
            "ota/ota.c"
            "route.c"
		INCLUDE_DIRS
			"."
        REQUIRES
            "app_update"
            "esp32-wifi-manager"
            "esp_littlefs"
            "esp_http_client"
            "esp_https_ota"
            "fatfs"
            "json"
)
