
idf_component_register(
		SRCS
			"main.c"
			"server.c"
            "filesystem.c"
            "led.c"
            "route.c"
            "route/v1/example.c"
            "route/v1/ota.c"
		INCLUDE_DIRS
			"."
        REQUIRES
            "app_update"
            "esp32-wifi-manager"
            "esp_littlefs"
            "esp_http_client"
            "esp_https_ota"
            "fatfs"
            "json"
)
