
idf_component_register(
		SRCS
			"main.c"
			"server.c"
            "filesystem.c"
            "led.c"
            "route.c"
            "route/v1/example.c"
            "route/v1/filesystem.c"
            "route/v1/ota.c"
            "route/v1/system.c"
		INCLUDE_DIRS
			"."
        REQUIRES
            "app_update"
            "esp_http_client"
            "esp_http_server"
            "esp_https_ota"
            "esp_littlefs"
            "esp_system"
            "esp_wifi"
            "fatfs"
            "json"
            "mdns"
            "nvs_flash"
            "libsodium"
)
